<resources>
    <string name="app_name" translatable="false">HMovies</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="download">Download</string>
    <string name="profile">Profile</string>
    <string name="movie">Movie</string>
    <string name="series_movie">Series movie</string>
    <string name="movies_for_rent">Rent</string>
    <string name="my_ds">My DS</string>
    <string name="watch_movie">Watch movie</string>
    <string name="detail">Detail</string>
    <string name="no_data">No data</string>
    <string name="error_data">Error data</string>
    <string name="loading">Loading&#8230;</string>
    <string name="no_internet">Can not connect to server.\nPlease check the transmission again</string>
    <string name="unknown_error">Something error, please try again later</string>
    <string name="new_movie_trending_on_hmovie">New movie trending on Hmovie</string>
    <string name="top_5_movie_today">Top rated movie</string>
    <string name="popular_movie">Popular movie</string>
    <string name="discover">Discover</string>
    <string name="latest_movie">Latest movie</string>
    <string name="upcoming">Upcoming</string>
    <string name="episode_movie">Episode</string>
    <string name="related_movie">Related movie</string>
    <string name="trailer" translatable="false">Trailer</string>
    <string name="share">Share</string>
    <string name="cast_name">Actor: %s</string>
    <string name="director_name">Director: %s</string>
    <string name="release_date_runtime_genre">%s &#9679; %d minute</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_seach">Movie name, actor, genre</string>
    <string name="seach_transition_name" translatable="false">transition_reveal</string>
</resources>