<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.codingtok.hmovies.ui.search.SearchViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:background="@color/colorPrimary"
        tools:context=".ui.search.SearchFragment">
        
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ThemeOverlay.AppCompat.Dark.ActionBar" >

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/search"
                app:titleTextColor="@color/colorTextPrimary"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
            
            <LinearLayout
                android:id="@+id/layout_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/_5sdp"
                android:paddingVertical="@dimen/_8sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:gravity="center_vertical"
                android:transitionName="@string/seach_transition_name"
                android:background="@drawable/background_seach" >

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:contentDescription="@string/app_name"
                    app:tint="@color/colorIconPrimary"
                    android:src="@drawable/ic_search" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:textSize="@dimen/_13ssp"
                    android:text="@string/hint_seach"
                    android:textColor="@color/white" />

            </LinearLayout>
            
            
        </com.google.android.material.appbar.AppBarLayout>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>