<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="com.codingtok.hmovies.data.model.Image.Quality" />
        <variable
            name="item"
            type="com.codingtok.hmovies.data.model.Movie.Slim" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/image_movie"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/app_name"
            app:loadUrl="@{item.poster.get(Quality.POSTER_W_500)}"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/layout_button"
            tools:src="@drawable/breaking_bad" />

        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/layout_button"
            android:background="@drawable/background_gradient" />

        <LinearLayout
            android:id="@+id/layout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_add"
                    app:tint="@color/colorIconPrimary" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/my_ds"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />

            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorButtonBackground"
                android:text="@string/watch_movie"
                android:textAllCaps="false"
                android:textSize="13sp"
                android:theme="@style/Widget.Material3.Button.ElevatedButton"
                app:icon="@drawable/ic_play"
                app:iconPadding="1dp"
                app:iconSize="20dp" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_info"
                    app:tint="@color/colorIconPrimary" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/detail"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />

            </LinearLayout>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
