<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="com.codingtok.hmovies.data.model.Image.Quality" />
        <variable
            name="item"
            type="com.codingtok.hmovies.data.model.Movie.Slim" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/image_movie"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:contentDescription="@string/app_name"
            app:loadUrl="@{item.poster.get(Quality.POSTER_W_780)}"
            tools:src="@drawable/breaking_bad" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_gradient" />

        <LinearLayout
            android:id="@+id/layout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_add"
                    app:tint="@color/colorIconPrimary" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5ssp"
                    android:text="@string/my_ds"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="@dimen/_10ssp"
                    tools:ignore="SmallSp" />

            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_40sdp"
                android:backgroundTint="@color/colorButtonBackground"
                android:textColor="@color/colorTextPrimary"
                android:text="@string/watch_movie"
                android:textAllCaps="false"
                android:textSize="@dimen/_11ssp"
                android:theme="@style/Widget.Material3.Button.ElevatedButton"
                app:icon="@drawable/ic_play"
                app:iconPadding="@dimen/_1sdp"
                app:iconSize="@dimen/_18sdp" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_info"
                    app:tint="@color/colorIconPrimary" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/detail"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="@dimen/_10ssp"
                    tools:ignore="SmallSp" />

            </LinearLayout>

        </LinearLayout>


    </RelativeLayout>
</layout>
