<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.codingtok.hmovies.ui.home.HomeViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:background="@color/colorPrimary"
        tools:context=".ui.home.HomeFragment">

        <com.scwang.smartrefresh.layout.SmartRefreshLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srlEnableAutoLoadMore="false"
            app:srlEnablePureScrollMode="true">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.codingtok.common.MultipleStatusView
                    android:id="@+id/layout_status_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:emptyView="@layout/layout_empty_view"
                    app:errorView="@layout/layout_error_view"
                    app:loadingView="@layout/layout_loading_view"
                    app:noNetworkView="@layout/layout_network_view">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/home_recyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        tools:listitem="@layout/layout_horizontal_movie"
                        android:clipToPadding="false"
                        android:paddingBottom="@dimen/_55sdp" />

                </com.codingtok.common.MultipleStatusView>

            </FrameLayout>

        </com.scwang.smartrefresh.layout.SmartRefreshLayout>

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_toolbar"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:contentInsetStart="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="top"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/logo"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingHorizontal="@dimen/_5sdp"
                    android:paddingVertical="@dimen/_3sdp"
                    app:layout_constraintTop_toBottomOf="@id/logo">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:text="@string/movie"
                        android:textColor="@color/colorTextPrimary"
                        android:textSize="@dimen/_12ssp" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:text="@string/series_movie"
                        android:textColor="@color/colorTextPrimary"
                        android:textSize="@dimen/_12ssp" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:text="@string/movies_for_rent"
                        android:textColor="@color/colorTextPrimary"
                        android:textSize="@dimen/_12ssp" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:text="@string/my_ds"
                        android:textColor="@color/colorTextPrimary"
                        android:textSize="@dimen/_12ssp" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.appcompat.widget.Toolbar>

    </RelativeLayout>
</layout>